# Protein-Pocket

./: .gitignore  app.py  main.py  pyproject.toml  requirements.txt  util_components.py
pages/: comparison_page.py
src/dashboard/: test_dashboard.py
src/engine/: descriptors.py  entry.py  pocket.py  protein_visualization.py
src/protein_pocket.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/utils/: cif_parsing.py  data_fetching.py  fetch_uniprot.py
tests/: test_descriptors.py  test_entry.py
