[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "protein-pocket"
version = "0.1.0"
dependencies = [
    "Bio==1.8.1",
    "biotite==1.6.0",
    "numpy==2.4.3",
    "rdkit==2025.9.6",
    "Requests==2.32.5",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
